tests/fail/literal_fractional_into_int/test.yap
fn main() {
    i32 x = 3.5;
}
